--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -305,7 +305,7 @@ img {
 	height: 600px;
 	width: 100%;
 	background: transparent url('mainvisual.png') no-repeat top center / cover;
-	background-image: image-url('mainvisual.png');
+	background-image: url(<%= asset_path 'mainvisual.png' %>);
 	position: relative;
 	overflow: hidden;
 
