ページネーション修正

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -40,7 +40,7 @@
           </div>
 
           <!---ページネーション--->    
-             <%= paginate @comment_page%>
+             <%= paginate @comments%>
           <!----コメント表示-->
 
           <div class="board__comments">
