--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -1167,7 +1167,7 @@ $hover-opacity: 0.7;
 .main-show{
 	background:#EEFFFF;
 	padding-top:20px;
-    
+    min-height:80vh;
 }
 
 .topic-wrap-show{
