--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -20,11 +20,7 @@
 	<div class="drawer-background for-drawer"></div>
 	<div class="drawer-content for-drawer">
 		<ul>
-			<li><a href="#a-card"></a></li>
-			<li><a href="#a-news"></a></li>
-			<li><a href="#a-price"></a></li>
-			<li><a href="#a-access"></a></li>
-			<li><a href="#a-contact"></a></li>
+			<li><a href="#a-card">最新記事</a></li>
 		</ul>
 	</div><!-- /drawer-content -->
 
