エラー修正

--- a/app/assets/stylesheets/boards.css
+++ b/app/assets/stylesheets/boards.css
@@ -196,6 +196,12 @@ img {
   transition: all 0.3s ease 0s;
 }
 
+@media (max-width: 767px) {
+  .header__logo {
+    font-size: 18px;
+  }
+}
+
 .header__nav {
   margin-left: auto;
 }
@@ -250,7 +256,6 @@ img {
   height: 600px;
   width: 100%;
   background: transparent url("mainvisual.png") no-repeat top center/cover;
-  background-image: image-url("mainvisual.png");
   position: relative;
   overflow: hidden;
 }
@@ -837,6 +842,9 @@ img {
 @media (max-width: 767px) {
   .footer__info {
     margin-top: 20px;
+  }
+  .footer__info ul {
+    display: flex;
   }
 }
 
