--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -308,7 +308,8 @@ img {
 .mainvisual {
 	height: 600px;
 	width: 100%;
-	background: transparent url('mainvisual.png') no-repeat top center / cover;
+	background: transparent no-repeat top center / cover;
+	background-image:image-url('mainvisual.png');
 	position: relative;
 	overflow: hidden;
 
