--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -309,6 +309,7 @@ img {
 	height: 600px;
 	width: 100%;
 	background: transparent url('mainvisual.png') no-repeat top center / cover;
+	background-image:image-url('mainvisual.png');
 	position: relative;
 	overflow: hidden;
 
