--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -308,7 +308,7 @@ img {
 .mainvisual {
 	height: 600px;
 	width: 100%;
-	background-image:image-url('mainvisual.png');
+	background-image: image-url("mainvisual.png");
 	position: relative;
 	overflow: hidden;
 
