--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -1361,4 +1361,15 @@ $hover-opacity: 0.7;
 	padding:5px 10px;
 	background-color: rgb(143, 140, 140);
 }
+
+.tag-field{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.input-tag{
+  padding-left: 10px;
+}
 	
