--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -2,6 +2,11 @@
 		<div class="inner header__inner">
 			<h1 class="header__logo">フィードバックチャンネル</h1>
 			<!-- /.header__logo -->
+			<nav class="header__nav">
+				<ul>
+					<li><a href="#a-card" class="is-active">最新記事</a></li>					
+				</ul>
+			</nav><!-- /.header__nav -->
 		</div><!-- /.header__inner -->
          </header><!-- /.header -->
 
