--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @board,url: boards_path, local: true do |f|%>
+<%= form_with model: @board, local: true do |f|%>
 <%= render 'shared/error_messages', model: f.object %>
 <div class="field">
 <%= f.label :title, "タイトルを書く" ,class: :form_message%><br />
@@ -9,8 +9,6 @@
 <%= f.label :text, "本文を書く" ,class: :form_message%><br />
 <%= f.text_area :text, class: :form__text %>
 </div>
-
-
 
 <div class="field">
 <%= f.label :image, "画像表示",class: :form_message %><br />
