画像を表示するスペースを作成

--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -13,6 +13,7 @@
 <div class="field">
 <%= f.label :image, "画像表示",class: :form_message %><br />
 <%= f.file_field :image %>
+<div id="image-list"></div>
 </div>
 
 <div class="actions">
