不要なコメント削除

--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -1,15 +1,13 @@
 <header class="header">
 		<div class="inner header__inner">
 			<h1 class="header__logo">フィードバックチャンネル</h1>
-			<!-- /.header__logo -->
-		</div><!-- /.header__inner -->
- </header><!-- /.header -->
+		</div>
+ </header>
  
 <div class="main-edit">
   <div class="inner-edit">
     <div class="form__wrapper">
       <h2 class="page-heading-edit">プロトタイプ編集</h2>
-      <%# 部分テンプレートでフォームを表示する %>
       <%= render partial: "form"%>
     </div>
   </div>
