--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,9 +1,8 @@
 <header class="header">
 		<div class="inner header__inner">
 			<h1 class="header__logo">フィードバックチャンネル</h1>
-			<!-- /.header__logo -->
-		</div><!-- /.header__inner -->
- </header><!-- /.header -->
+		</div>
+ </header>
  
 <div class="main-new">
   <div class="inner-new">
