--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,10 +1,9 @@
 <div class="card__item">
 	<%= link_to(board_path(board), class: :media) do %>
-		<div class="media__img"><%= image_tag board.image.variant(resize: '300x200'), class: :board_img%></div><!-- /.media__img -->
+		<div class="media__img"><%= image_tag board.image.variant(resize: '300x200'), class: :board_img%></div>
 		<div class="media__body">
             <%= simple_format("#{board.title}", { class: 'media__title' }, { sanitize: false, wrapper_tag:"div" }) %>
             <%= simple_format("#{board.text}", { class: 'media__content' }, { sanitize: false, wrapper_tag:"div" }) %>
-			<!-- /.media__content -->
-		</div><!-- /.media__body -->
+		</div>
     <% end %>
-</div><!-- /.card__item -->
+</div>
