--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,13 +1,11 @@
 <header class="header">
 		<div class="inner header__inner">
 			<h1 class="header__logo">フィードバックチャンネル</h1>
-			<!-- /.header__logo -->
-		</div><!-- /.header__inner -->
- </header><!-- /.header -->
+		</div>
+ </header>
 
 <div class="main-show">
         <div class="topic-wrap-show">
-         <!--パンくずリスト-->
           <ol class="bread-wrap">
             <li class="bread-main">
               <%= link_to "ホーム", root_path ,class: :bread_show %>
@@ -37,9 +35,7 @@
             </div>
           </div>
 
-          <!---ページネーション--->    
              <%= paginate @comments%>
-          <!----コメント表示-->
 
           <div class="board__comments">
              <ul class="comments_lists" >
