背景画像変更

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -25,7 +25,7 @@
 
 
 
-	<div class="mainvisual" style="background-image: transparent image-url( 'mainvisual.png') no-repeat top center / cover;">
+	<div class="mainvisual" style="background: transparent image-url(<%= 'mainvisual.png' %>) no-repeat top center / cover;">
 		<div class="mainvisual__content">
 			<div class="mainvisual__title">一番伝えたい<br class="hidden-tab hidden-pc">ことを書く</div>
 			<div class="mainvisual__lead">意見をたくさんもらおう</div>
