--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -308,6 +308,7 @@ img {
 .mainvisual {
 	height: 600px;
 	width: 100%;
+	background: transparent image-url('mainvisual.png') no-repeat top center / cover;
 	position: relative;
 	overflow: hidden;
 
