--- a/app/assets/stylesheets/boards.css
+++ b/app/assets/stylesheets/boards.css
@@ -1310,3 +1310,13 @@ img {
   padding: 5px 10px;
   background-color: #8f8c8c;
 }
+.head-right {
+  margin-bottom: 35px;
+}
+.comment-area {
+	text-align: right;
+	margin-right: 10%;
+}
+.comments_wrap {
+	margin-bottom: 50px;
+}
