--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -1202,7 +1202,7 @@ $hover-opacity: 0.7;
 	}
     
     .head-right{
-        padding-left:120px;
+        padding-left:135px;
     }
 
 	.show-left{
@@ -1285,7 +1285,14 @@ $hover-opacity: 0.7;
 		font-weight:bold;
 	}
 }
-
+.comment-area {
+	text-align: right;
+	margin-right: 10%;
+	width: 100%;
+}
+.comments_wrap {
+	margin-bottom: 50px;
+}
 
 //コメント入力
 .show_comment{
