--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -30,8 +30,9 @@
             <div class="head-right">
               <h1><%= "#{@board.title}"%></h1>
               <h3 class="show_text"><%= "#{@board.text}"%></h3>
-              <p class="comment"><span class="icon-comment"></span><%= @board.comments.count %><span>コメント</span><span class="datetime"><%= l @board.created_at %></span></p>
-              <a href="#form" class="btn btn-positive">コメントを投稿する</a>
+              <div class="comment-area">
+                <p class="comment"><span class="icon-comment"></span><%= @board.comments.count %><span>コメント</span><span class="datetime"><%= l @board.created_at %></span></p>
+              </div>
             </div>
           </div>
 
@@ -63,7 +64,7 @@
                   <%= f.text_area :text ,class: :show__btn%>
                 </div>
                 <div class="actions">
-                  <%= f.submit "送信する", class: :form__btn  %>
+                  <%= f.submit "投稿する", class: :form__btn  %>
                 </div>
               <% end %> 
             <% end %>  
