--- a/app/assets/stylesheets/boards.css
+++ b/app/assets/stylesheets/boards.css
@@ -1157,8 +1157,8 @@ img {
   padding-left: 100px;
 }
 
-.head-area .head-right {
-  padding-left: 120px;
+.head-right {
+  padding-left: 135px;
 }
 
 .head-area .show-left {
