--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -1171,7 +1171,7 @@ $hover-opacity: 0.7;
 //パンくず
 .bread-wrap{
     display:flex;
-    padding-top:20px;
+    padding: 20px 40px 0 55px;
     li{
 
       &:nth-child(2){
@@ -1196,7 +1196,8 @@ $hover-opacity: 0.7;
 }
 
 .head-area{
-	
+	padding: 0 30px;
+
     .head-wrap{
       padding-left:100px;
 	}
