--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -798,7 +798,7 @@ $drawer-content-width: 200px;
 	.board_img{
 		width: 90%;
         height: 200px;
-        object-fit: contain;
+        object-fit: cover;
 	}
 	
 
