背景色変更

--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -1073,11 +1073,11 @@ $hover-opacity: 0.7;
     padding: 10px;   
    padding-top:30px;
    height:90vh;
-   background:#EEFFFF;
+   background:#efefef;
 }
 
 .main-login{
-    background:#EEFFFF;
+    background:#efefef;
     padding: 10px;   
     height:90vh;
     padding-top:100px;
@@ -1123,7 +1123,7 @@ $hover-opacity: 0.7;
 
 //投稿画面
 .main-new{
-    background:#EEFFFF;
+    background:#efefef;
     padding: 10px;
     height:90vh;
 }
@@ -1182,7 +1182,7 @@ $hover-opacity: 0.7;
 
 //showの投稿表示
 .main-show{
-	background:#EEFFFF;
+	background:#efefef;
 	padding-top:20px;
     min-height:90vh;
 }
@@ -1249,7 +1249,7 @@ $hover-opacity: 0.7;
 
 //edit
 .main-edit{
-    background:#EEFFFF;
+    background:#efefef;
     padding: 10px;   
 	min-height: 90vh;
 }
@@ -1282,7 +1282,7 @@ $hover-opacity: 0.7;
         border-radius: 3px;
         transition: 0.4s ease;
         margin: 0 4px;
-		background:#EEFFFF;
+		background:#efefef;
 		font-weight:bold;
 	}
 }
