--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,3 +34,60 @@
 .pagination>li>a:hover {        
   border-radius: 15px;    /*角を丸くする*/
 }
+
+.spinner_area {
+  display: flex;
+  justify-content: end;
+}
+
+.btnspinner{
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  height: 100%;
+}
+
+.spinner_area input{
+  padding: 11px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 18px;
+  width: auto;
+  vertical-align: middle;
+  /* デフォルトのスピナーを消す */
+  -webkit-appearance: none;
+  -moz-appearance:textfield;
+}
+
+.spinner_area input[type="button"]{
+  cursor: pointer;
+}
+.spinner_area_plus {
+  margin-right: 10px;
+  width: 40px;
+  height: 40px;
+}
+
+.spinner_area_minus {
+  width: 40px;
+  height: 40px;
+}
+
+.spinner_plus, .spinner_minus {
+  margin-bottom: 0px;
+  text-align: center;
+}
+
+.favorite_link {
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+svg:not(:host).svg-inline--fa, svg:not(:root).svg-inline--fa {
+  height: 60%;
+}
