不要な記述削除

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -52,7 +52,7 @@
                   <div class="spinner_area">
                     <div class="spinner_area_plus"">
                       <p class="spinner_plus"><%= comment.favorites.count %></p>
-                      <%= render 'favorites/favorite', {comment: comment, board: @board} %>
+                      <%= render 'favorites/favorite', comment: comment%>
                     </div>
                   </div>
                 </div>
